--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   </script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400&family=Noto+Sans:wght@300;400;500;600&family=Manrope:wght@200..800&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Inter:wght@300;400;500;600;700&family=Noto+Serif:ital,wght@0,400;0,700;1,400&family=Noto+Sans:wght@300;400;500;600&family=Manrope:wght@200..800&display=swap"
     rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&family=Material+Icons+Outlined&display=swap"
     rel="stylesheet" />
   <script>
     if (typeof tailwind !== 'undefined') {
@@ -40,9 +40,10 @@
               "background-dark": "#1a1e1f",
             },
             fontFamily: {
-              "display": ["Noto Serif", "serif"],
-              "sans": ["Noto Sans", "sans-serif"],
-              "manrope": ["Manrope", "sans-serif"]
+              "display": ["Playfair Display", "serif"],
+              "sans": ["Inter", "sans-serif"],
+              "manrope": ["Manrope", "sans-serif"],
+              "serif": ["Playfair Display", "serif"]
             },
             borderRadius: {
               "xl": "1rem",
