--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Inter:wght@300;400;500;600;700&family=Noto+Serif:ital,wght@0,400;0,700;1,400&family=Noto+Sans:wght@300;400;500;600&family=Manrope:wght@200..800&display=swap"
     rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&family=Material+Icons+Outlined&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&family=Material+Icons+Outlined&display=swap"
     rel="stylesheet" />
   <script>
     if (typeof tailwind !== 'undefined') {
@@ -32,18 +33,17 @@
         theme: {
           extend: {
             colors: {
-              "primary": "#36594d",
-              "primary-dark": "#2a453b",
-              "accent-gold": "#E4C78F",
-              "gold-muted": "#C9A961",
-              "background-light": "#fbfaf9",
-              "background-dark": "#1a1e1f",
+              "primary": "#0f3e29",
+              "primary-dark": "#0a2b1d",
+              "accent-gold": "#C9A961",
+              "gold-muted": "#d4ba80",
+              "background-light": "#fdf8f2",
+              "background-dark": "#131f1a",
             },
             fontFamily: {
-              "display": ["Playfair Display", "serif"],
-              "sans": ["Inter", "sans-serif"],
-              "manrope": ["Manrope", "sans-serif"],
-              "serif": ["Playfair Display", "serif"]
+              "display": ["Noto Serif", "serif"],
+              "sans": ["Manrope", "sans-serif"],
+              "serif": ["Noto Serif", "serif"]
             },
             borderRadius: {
               "xl": "1rem",
