feat: Introduce JZ Privé loyalty program with dedicated pages and UI components, alongside a new service details page.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
               "serif": ["Noto Serif", "serif"],
               "outfit": ["Outfit", "sans-serif"]
             },
+            boxShadow: {
+              'huge': '0 20px 40px -15px rgba(0, 0, 0, 0.1), 0 10px 20px -10px rgba(0, 0, 0, 0.05)',
+              'hugest': '0 30px 60px -12px rgba(0, 0, 0, 0.25), 0 18px 36px -18px rgba(0, 0, 0, 0.15)',
+            },
             borderRadius: {
               "none": "0",
               "sm": "0.125rem",
@@ -133,10 +137,21 @@
       scrollbar-width: none;
     }
 
-    .stagger-1 { animation-delay: 0.1s; }
-    .stagger-2 { animation-delay: 0.2s; }
-    .stagger-3 { animation-delay: 0.3s; }
-    .stagger-4 { animation-delay: 0.4s; }
+    .stagger-1 {
+      animation-delay: 0.1s;
+    }
+
+    .stagger-2 {
+      animation-delay: 0.2s;
+    }
+
+    .stagger-3 {
+      animation-delay: 0.3s;
+    }
+
+    .stagger-4 {
+      animation-delay: 0.4s;
+    }
   </style>
   <link rel="stylesheet" href="/index.css">
 </head>
